3 August 2005:  Menelaos Karavelas
- the demo now shows the conflict region for a site. The code is kind
  of ugly and should be modified; the color of the site should be
  different from the color of the conflict region. the conflict region
  is not yet done for the Apollonius diagram

30 July 2005:  Menelaos Karavelas
- removed duplicate typedef in Virtual_Voronoi_diagram_base_2 class;
  g++ version 4.x.x was complaining.

20 July 2005:  Menelaos Karavelas
- demo: added halfedge classes that derive from the halfedge class of the
  adaptor, that are used for drawing to Qt_widget
- code:
  * removed the Voronoi_edge_2 and Voronoi_vertex_2 classes from the
    Voronoi traits; their functionality has been moved in the halfedge and
    vertex classes of the adaptor.
  * added first attempt for implementation of identity Voronoi traits
- testing: removed testing for Voronoi_edge_2 and Voronoi_vertex_2 concepts;
  added testing for the corresponding functionality added in Halfedge and
  Vertex.

17 July 2005:  Menelaos Karavelas
- in various doc files renamed:
  * Voronoi_diagram_adaptor_2 to Voronoi_diagram_2
  * Dual_graph to Delaunay_graph
  * Dual_face_handle to Delaunay_face_handle
  * Dual_edge to Delaunay_edge
  * Dual_vertex_handle to Delaunay_vertex_handle
- the halfedges, vertices and faces of the Voronoi diagram as well as the
  corresponding handles are now models of LessThanComparable
- the dual feature of halfedges, vertices and faces is now accessed through
  a method called simply dual().
- removed references to holes in both doc and code
- removed example connected_components.C; point location example now uses the
  Delaunay triangulation.
- added demo files

16 July 2005:  Menelaos Karavelas
- added swap and clear in requirements of DelaunayGraph_2 concept
- renamed Voronoi_diagram_adaptor_2 to Voronoi_diagram_2 and Dual_graph to
  Delaunay_graph in
  doc_tex/Voronoi_diagram_2_ref/Voronoi_diagram_adaptor_2.tex