@@ -24,7 +24,7 @@ class Power_diagram_halfedge_2
  public:
   Power_diagram_halfedge_2() : Base() {}
   Power_diagram_halfedge_2(const Base& e) : Base(e), is_conflict(false) {}
-  Power_diagram_halfedge_2(const Delaunay_edge& e, bool inf, const Site_2& s)
+  Power_diagram_halfedge_2(const Delaunay_edge& e, int inf, const Site_2& s)
     : Base(), is_conflict(true), e_(e), inf_(inf), s_(s) {}
 
   void draw(Qt_widget& qt_w) const
@@ -36,7 +36,7 @@ class Power_diagram_halfedge_2
     typedef typename Geom_traits::Line_2                     Line_2;
 
     if ( is_conflict ) {
-      if ( !inf_ ) {
+      if ( inf_ == 0 ) {
 	typename Geom_traits::Construct_weighted_circumcenter_2 circumcenter;
 	Point_2 c1 = circumcenter(e_.first->vertex(0)->point(),
 				  e_.first->vertex(1)->point(),
@@ -101,7 +101,7 @@ class Power_diagram_halfedge_2
 private:
   bool is_conflict;
   Delaunay_edge e_;
-  bool inf_;
+  int inf_;
   Site_2 s_;
 };
 
