@@ -1,3 +1,7 @@
+6 August 2005:  Menelaos Karavelas
+- demo: fixed the display of the conflict region for all three kinds
+  of Voronoi diagrams.
+
 3 August 2005:  Menelaos Karavelas
 - the demo now shows the conflict region for a site. The code is kind
   of ugly and should be modified; the color of the site should be
